# encounter

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: background_scheme.rs  multi_beat.rs  single_exchange.rs
src/: affordance.rs  catalog.rs  error.rs  escalation.rs  lib.rs  practice.rs  scoring.rs  types.rs  value_argument.rs
src/resolution/: background.rs  mod.rs  multi_beat.rs  single.rs
tests/: catalog_loading.rs  multi_beat.rs  real_catalog.rs  single_exchange.rs
tests/fixtures/: betray.fabula  betray.toml  insult.fabula  insult.toml  reveal_secret.fabula  reveal_secret.toml
