[package]
name = "encounter"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Resolution engine for multi-character encounters with pluggable scoring backends"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/patricker/encounter"
homepage = "https://github.com/patricker/encounter"
documentation = "https://docs.rs/encounter"
keywords = ["social-simulation", "encounter", "interaction", "narrative", "game-ai"]
categories = ["algorithms", "game-development"]
exclude = [
    ".claude/",
    "tests/real_catalog.rs",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
